--- a/src/pages/styles/ArtistsPageCSS.css
+++ b/src/pages/styles/ArtistsPageCSS.css
@@ -4,22 +4,36 @@
     border-radius: 50%;
     overflow: hidden;
     margin: 0 auto;
-  }
+}
+
+.container:hover .pic1 {
+  display: none;
+}
   
-  .container:hover .pic1 {
-    display: none;
-  }
-    
-  .container:hover .pic2 {
-    display: block;
-  }
-  
-  .container .pic {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
-  .container .pic2 {
-    display: none;
-  }
+.container:hover .pic2 {
+  display: block;
+}
+
+.container .pic {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.container .pic2 {
+  display: none;
+}
+
+video{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.vidBg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
