--- a/src/pages/styles/ArtistsPageCSS.css
+++ b/src/pages/styles/ArtistsPageCSS.css
@@ -56,8 +56,10 @@ video{
 }
 
 .streaming-heading {
+  inline-size: 95%;
   font-size: 24px;
   color: #333;
+  overflow-wrap: break-word;
 }
 
 .streaming-list {
@@ -79,7 +81,7 @@ video{
   border-radius: 4px;
   transition: background-color 0.3s ease;
   background-color: #1db954;
-  width: 100%;
+  width: 90%;
 }
 
 .streaming-link.spotify {
